# storebook

./: .dockerignore  .gitignore  .swp  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml
.github/workflows/: workflow-pr.yml
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
storebook/: asgi.py  settings.py  urls.py  wsgi.py
