[tool.poetry]
name = "storebook"
version = "0.1.0"
description = "Bookstore API"
authors = ["Bruno Dutra <brunocordeiro.edf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.4"
factory-boy = "^3.3.0"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
